[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/3D/Main/Block.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
roughness = 0.0
transmission_enabled = true
transmission = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=2]

[node name="BlockPlacer" type="Spatial"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 1 )

[node name="CollisionDetector" type="Area" parent="."]
transform = Transform( 0.818999, 0, 0, 0, 1, -1.15089e-07, 0, 1.50996e-07, 0.762198, -0.000992641, -0.0805836, 0 )
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="CollisionDetector"]
transform = Transform( 0.072, 0, 0, 0, 0.081, 0, 0, 0, 0.073476, 0, 0.0764497, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
[connection signal="body_exited" from="CollisionDetector" to="." method="_on_CollisionDetector_body_exited"]
